docs: Try a different \gaiathing definition in SC/21.
To match the GAIA style better make the gaiathing a bold  san serif
fount.  It's looks fine in the PDF, but the html it's bold italic roman.
Still on one page that had too much bold from a TIP as well as several
GAIA things, the italics delineate the two.  We shall have to see if
Holly approves this change.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -239,7 +239,7 @@
 
 % GAIA menu functions and buttons.  Would like a bold texttt to mimic
 % their appearance in GAIA, but the founts are not in regular LaTeX.
-\newcommand{\gaiathing}[1]{\textbf{#1}}
+\newcommand{\gaiathing}[1]{\textbf{\textsf{#1}}}
 
 % SMURF tasks
 \newcommand{\calcnoise}{\xref{\task{calcnoise}}{sun258}{CALCNOISE}}
