docs: Compress the gap in the troubleshooting table of SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -3736,7 +3736,7 @@ LOGFILE=skyloop.log ILEVEL=ATASK GLEVEL=debug
 \hline
 I have blobs in my map that look like thumbprints. & Try including
 \texttt{dimmconfig\_fix\_blobs.lis} parameters:
-\begin{itemize}[noitemsep]
+\begin{itemize}[nolistsep]
   \item \param{flt.filt\_order~=~4} to set a 4th-order Butterworth filter for
   the \texttt{FLT} model.
   \item \param{flt.ring\_box1~=~0.5} uses a filter to identify and flag
@@ -3777,7 +3777,7 @@ for you final map resulting in higher noise.\\
 \hline
 My map will not converge.& Try including \texttt{dimmconfig\_fix\_convergence.lis}
 parameters:
-\begin{itemize}[noitemsep]
+\begin{itemize}[nolistsep]
 \item \param{com.freeze\_flags~=~10}
 \item \param{ast.zero\_freeze~=~10}
 \item \param{flt.zero\_freeze~=~10}
